@@ -22,8 +22,8 @@ dir := console
 makemode := server
 
 target = console
-SRCS = main.c console.c focus.c vga-display.c vga.c dynafont.c bdf.c
-LCLHDRS = focus.h input-drv.h console.h display-drv.h vga.h vga-hw.h dynafont.h bdf.h \
+SRCS = main.c vcons.c focus.c vga-display.c vga.c dynafont.c bdf.c
+LCLHDRS = focus.h input-drv.h vcons.h display-drv.h vga.h vga-hw.h dynafont.h bdf.h \
 	mutations.h priv.h
 
 HURDLIBS = trivfs fshelp iohelp threads ports ihash shouldbeinlibc
